# parqeye

./: .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  dist-workspace.toml
.github/setup-builder/: action.yml
.github/workflows/: ci.yaml  release.yml
src/: app.rs  column_chunk.rs  config.rs  dictionary.rs  lib.rs  main.rs  metadata.rs  row_groups.rs  schema.rs  search.rs  stats.rs  tab.rs  tabs.rs  ui.rs  utils.rs  visualize.rs
src/components/: column_sizes.rs  data_table.rs  metadata.rs  mod.rs  row_group_metadata.rs  row_group_progress.rs  schema_table.rs  schema_tree.rs  scrollbar.rs  tabs.rs  warning.rs
src/components/row_group/: metadata.rs  mod.rs  schema_md.rs
src/components/schema/: mod.rs  table.rs  tree.rs
src/file/: contents.rs  error.rs  from.rs  metadata.rs  mod.rs  parquet_ctx.rs  row_groups.rs  sample_data.rs  schema.rs  utils.rs
src/tabs/: manager.rs  metadata.rs  mod.rs  row_groups.rs  schema.rs  visualize.rs
src/ui/pages/: schema.rs
