[package]
name = "datatools"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }         # for CLI parsing
parquet = { version = "54.2.1", features = ["cli","async","json","arrow"] }  # core Parquet APIs
arrow = "54.2.1"                                        # Arrow arrays and data types
parquet-format = "4.0.0"                                # Thrift structs
ratatui = "0.29.0"
crossterm = "0.29.0"
chrono = "0.4"                                          # for timestamp handling
itertools = "0.14.0"
