[package]
name = "parqeye"
description = "Parquet viewer for the command line"
version = "0.0.2"
readme = "README.md"
license = "MIT"
repository = "https://github.com/kaushiksrini/parqeye"
keywords = ["parquet", "parq", "visualizer", "schema", "tui"]
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }         # for CLI parsing
parquet = { version = "59.0.0", features = ["cli","async","json","arrow"] }  # core Parquet APIs
arrow = "59.0.0"                                        # Arrow arrays and data types
parquet-format = "4.0.0"                                # Thrift structs
ratatui = "0.29.0"
crossterm = "0.29.0"
chrono = "0.4"                                          # for timestamp handling
itertools = "0.14.0"
polars = { version = "0.51.0", features = ["lazy", "parquet", "dtype-full", "timezones"] }
serde_json = "1"
thiserror = "2"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[package.metadata.dist]
ci = "github"

